# vupdaters

./: .gitignore  Cargo.toml  LICENSE  README.md  artifacts.json  changelog.rss  flake.nix  index.html  oranda-workspace.json  rust-toolchain.toml  testconfig.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml  web.yml
api/: Cargo.toml
api/src/: api.rs  client.rs  dial.rs  lib.rs
api/src/api/: dial_status.rs  list_dials.rs  set_dial.rs
artifacts/: index.html
book/: 404.html  dialctl.html  index.html  print.html  searchindex.js  searchindex.json  vupdated.html
book/dialctl/: list.html  reload.html  set.html  status.html
book/vupdated/: config.html  gen-config.html  hotplug.html  nixos.html  systemd.html
changelog/: index.html
docs/: .gitignore  Cargo.toml  book.toml  build.rs
docs/mdbook/: SUMMARY.md  dialctl.md  intro.md  vupdated.md
docs/mdbook/dialctl/: list.md  reload.md  set.md  status.md
docs/mdbook/vupdated/: gen-config.md  hotplug.md
docs/src/: lib.rs
funding/: index.html
protocol/: Cargo.toml
protocol/src/: v1.rs
vupdate/: Cargo.toml
vupdate/assets/: cpu_load.png.kra  mem.png~  swap.png.kra
vupdate/src/: cli.rs  daemon.rs  lib.rs  main.rs
vupdaters/: Cargo.toml  README.md  oranda.json  vupdated-hotplug.rules
vupdaters/assets/: battery.png.kra  cpu_load.png.kra  cpu_temp.png.kra  disk.png.kra  mem.png.kra  swap.png.kra
vupdaters/src/: cli.rs  daemon.rs  dialctl.rs  lib.rs
vupdaters/src/daemon/: config.rs  hotplug.rs  signal.rs
