[workspace]
resolver = "2"
members = [
    "api",
    "vupdate",
]

[workspace.dependencies]
clap = { version = "4" }
camino = "1"
directories = { version = "5.0.1"}
http = { version = "1" }
reqwest = { version = "0.11.24", default-features = false }
miette = { version = "6.0.1" }
serde = { version = "1.0" }
serde_json = { version = "1.0" }
serde_with = { version = "3.6.0" }
systemstat = { version = "0.2.3" }
tokio = { version = "1", features = ["full"] }
toml = { version = "0.8.9" }
thiserror = { version = "1.0" }
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18" }