[workspace]
resolver = "2"
members = [
    "api",
    "docs",
    "protocol",
    "vupdaters",
]
defaultMembers = [
    "api",
    "vupdaters",
]

[workspace.package]
edition = "2021"
authors = ["Eliza Weisman <eliza@elizas.website>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/hawkw/vupdaters"
homepage = "https://www.elizas.website/vupdaters"

[workspace.dependencies]
backoff = { version = "0.4", default-features = false }
clap = { version = "4" }
cargo_metadata = { version = "0.18" }
camino = "1"
directories = { version = "5.0.1"}
futures = { version = "0.3", features = ["async-await"], default-features = false }
http = { version = "1" }
reqwest = { version = "0.11.24", default-features = false }
miette = { version = "7.0.0" }
owo-colors = { version = "4.0.0" }
serde = { version = "1.0" }
serde_json = { version = "1.0" }
serde_with = { version = "3.6.0" }
supports-color = { version = "2.0" }
systemstat = { version = "0.2.3" }
tokio = { version = "1", features = ["full"] }
tokio-udev = { version = "0.9.1" }
toml = { version = "0.8.9" }
thiserror = { version = "1.0" }
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18" }
tracing-journald = { version = "0.3.0" }
url = { version = "2.5.0" }
zbus_systemd = "0.0.11"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.10.0"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu",
    "x86_64-pc-windows-msvc",
]
# Publish jobs to run in CI
pr-run-mode = "plan"


[workspace.metadata.dist.dependencies.apt]
pkg-config = '*'
libudev-dev = '*'

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
