[package]
name = "vu-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
client = ["reqwest", "url"]

[dependencies]
clap = { workspace = true, default-features = false, optional = true, features = ["derive", "env"] }
http = { workspace = true }
reqwest = { workspace = true, optional = true,  default-features = false, features = ["json", "multipart"] }
url = { workspace = true, optional = true }
miette = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_with = { workspace = true, features = ["macros"] }
thiserror = { workspace = true }
tracing = { workspace = true, features = ["attributes"] }

[dev-dependencies]
tokio = { workspace = true }