[package]
name = "vu-api"
version = "0.1.0"
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
categories = ["api-bindings", "hardware-support"]
keywords = ["vu-dials"]

[features]
client = ["reqwest", "url"]

[dependencies]
http = { workspace = true }
reqwest = { workspace = true, optional = true,  default-features = false, features = ["json", "multipart"] }
url = { workspace = true, optional = true }
miette = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_with = { workspace = true, features = ["macros"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true, features = ["attributes"] }

[dev-dependencies]
tokio = { workspace = true }
