[package]
name = "vupdate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html
[features]

[dependencies]
anyhow = { workspace = true }
http = { workspace = true }
reqwest = { workspace = true, default-features = false, features = ["rustls-tls"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_with = { workspace = true, features = ["macros"] }
tokio = { workspace = true }
vu-api = { path = "../api", features = ["client"] }