[package]
name = "vupdaters"
version = "0.1.0"
edition = "2021"
authors = ["Eliza Weisman <eliza@elizas.website"]
description = "Tools for updating VU-Dials."

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html
[features]

[dependencies]
camino = { workspace = true }
clap = { workspace = true, features = ["std", "derive", "env"] }
directories = { workspace = true }
http = { workspace = true }
miette = { workspace = true, features = ["fancy"] }
reqwest = { workspace = true, default-features = false, features = ["rustls-tls"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_with = { workspace = true, features = ["macros"] }
systemstat = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-journald = { workspace = true }
vu-api = { path = "../api", features = ["client"] }